--- a/views/api.ejs
+++ b/views/api.ejs
@@ -1,3 +1,4 @@
 <h1>Welcome <%= user.username %></h1>
-<a href="/api/student">STUDENT</a><br><br>
-<a href="/api/company">COMPANY</a>
+<a href="/api/students">STUDENTS</a><br><br>
+<a href="/api/companies">COMPANIES</a><br><br>
+<a href="/api/logout">Logout</a>
